--- a/gemm/gemm.vcxproj.filters
+++ b/gemm/gemm.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="util.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="01register.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
