--- a/gemm/gemm.vcxproj.filters
+++ b/gemm/gemm.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="01register.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="02cache.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
