--- a/gemm/gemm.vcxproj
+++ b/gemm/gemm.vcxproj
@@ -25,6 +25,7 @@
     <ClInclude Include="00naive.h" />
     <ClInclude Include="01register.h" />
     <ClInclude Include="02cache.h" />
+    <ClInclude Include="03blis.h" />
     <ClInclude Include="util.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
