--- a/gemm/gemm.vcxproj
+++ b/gemm/gemm.vcxproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <ClInclude Include="00naive.h" />
     <ClInclude Include="01register.h" />
+    <ClInclude Include="01register512.h" />
     <ClInclude Include="02cache.h" />
     <ClInclude Include="03blis.h" />
     <ClInclude Include="gemm_util.h" />
