--- a/gemm/gemm.vcxproj.filters
+++ b/gemm/gemm.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="03blis.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="01register512.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
