--- a/gemm/gemm.vcxproj
+++ b/gemm/gemm.vcxproj
@@ -19,9 +19,6 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="C:\Users\i\home\wrk\avx2\gemm\gemm\main.cpp" />
-  </ItemGroup>
-  <ItemGroup>
     <ClInclude Include="00naive.h" />
     <ClInclude Include="01register.h" />
     <ClInclude Include="01register512.h" />
@@ -29,6 +26,9 @@
     <ClInclude Include="03blis.h" />
     <ClInclude Include="gemm_util.h" />
     <ClInclude Include="util.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\..\..\..\home\wrk\avx2\gemm\gemm\main.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{AB47F1A9-A8D3-42B2-816E-49D8CD690B27}</ProjectGuid>
