--- a/gemm/gemm.vcxproj
+++ b/gemm/gemm.vcxproj
@@ -27,6 +27,7 @@
     <ClInclude Include="04blis.h" />
     <ClInclude Include="config.h" />
     <ClInclude Include="gemm_util.h" />
+    <ClInclude Include="papix.h" />
     <ClInclude Include="util.h" />
   </ItemGroup>
   <ItemGroup>
