--- a/gemm/gemm.vcxproj
+++ b/gemm/gemm.vcxproj
@@ -25,6 +25,7 @@
     <ClInclude Include="02cache.h" />
     <ClInclude Include="03blis.h" />
     <ClInclude Include="04blis.h" />
+    <ClInclude Include="05blis_omp.h" />
     <ClInclude Include="config.h" />
     <ClInclude Include="gemm_util.h" />
     <ClInclude Include="papix.h" />
