--- a/gemm/gemm.vcxproj.filters
+++ b/gemm/gemm.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="05blis_omp.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="06blis_th.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
